# ScrapeNasd

./: CMakeLists.txt  Scrape.cpp  Scrape.h  Scrape_test.cpp  Scrape_test.h  Stocks.cpp  main.cpp  test_scrape.cpp
